# agnesi

./: Cargo.toml  readme.md
resources/solidity/: SimpleStorage.sol
src/: core.rs  main.rs  simple_storage.rs  solidity.rs  transaction.rs
