[package]
name = "agnesi"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "1.0.0", features = ["legacy"] }
ethers-solc = { version="1.0.0" }
#ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["ws"] }

tokio = { version = "1.21.2", features = ["full"] }
color-eyre = "0.6.2"

log = "0.4.17"
env_logger = "0.9.1"

hex = "0.4.3"
clap = "4.0.18"