[package]
name = "agnesi"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "1.0.0", features = ["legacy"] }
ethers-solc = { version = "1.0.0" }

tokio = { version = "1.21.2", features = ["full"] }
color-eyre = "0.6.2"

log = "0.4.17"
env_logger = "0.9.1"

hex = "0.4.3"
clap = "4.0.18"